[package]
name = "bibrust"
version = "0.1.0"
authors = ["tesserato <tesserato@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"

# [dependencies.rusqlite]
# version = "0.19.0"
# features = ["bundled"]